--- a/Templates/base.html
+++ b/Templates/base.html
@@ -4,88 +4,105 @@
         <meta charset="utf-8">
         <meta name="viewPort" content="width-device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
+        <script src="https://kit.fontawesome.com/b8362869d4.js" crossorigin="anonymous"></script>
         <link href="static\css\main_bs.css" rel="stylesheet" />
+        <link href="static\css\rating.css" rel="stylesheet" />
         <title>Happy Home</title>
     </head>
     <body>
-        
-        <nav class="navbar navbar-expand-lg py-4">
-            <div class="container-fluid">
-                <a class="navbar-brand px-4" href="#">
-                    <img src="static\images\HappyHome.png" width="300" height="100" alt="Bootstrap">
+        <div class="container-fluid">
+            <nav class="navbar navbar-expand-sm">
+                <div class="container-fluid">
+                    <a class="navbar-brand px-4" href="#">
+                        <img src="static\images\HappyHome.png" width="300" height="100" alt="Happy Home">
                     </a>
-                <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            <!-- navbar-brand in the navbar will pusht the toggler to the right - search navbar toggler -->
-                <div class="collapse navbar-collapse justify-content-end px-4" id="navbarSupportedContent" id="navbarNav"> 
-                <ul class="navbar-nav ">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Reviews</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Create Account</a>
-                    </li>
-                </ul>
-                </div> <!-- collapse -->
-            </div> <!-- container-fluid -->
-        </nav>
-
+                    <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                <!-- navbar-brand in the navbar will pusht the toggler to the right - search navbar toggler -->
+                    <div class="collapse navbar-collapse justify-content-end px-4" id="navbarSupportedContent" id="navbarNav"> 
+                        <ul class="navbar-nav ">
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'home' %}">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Services</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Reviews</a>
+                            </li>
+                            {% if user.is_authenticated %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'logout' %}">Logout</a> 
+                                </li>
+                                {% if user.is_provider %}
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="{% url 'businessProfile' %}">Profile</a> 
+                                    </li>
+                                {% else %}
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="{% url 'userProfile' %}">Profile</a>
+                                    </li>
+                                {% endif %}
+                            {% else %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'login' %}">Login</a>
+                                </li>
+                            {% endif %}
+                            {% if user.is_authenticated %}
+                                <li class="nav-item">
+                                    <a class="nav-link">Welcome, {{ user.username }}!</a>
+                                </li>
+                            {% else %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'createAccount' %}">Create Account</a>
+                                </li>
+                            {% endif %}
+                        </ul>
+                    </div> <!-- collapse -->
+                </div> <!-- container-fluid -->
+            </nav>
+        </div>
+        <br/>
+        <div class="container">
+            {% if messages %}
+                {% for message in messages %}
+                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                 </div>
+                {% endfor %}
+            {% endif %}
+        </div><!-- container -->
+        <div class="container pt-3 pb-3">
         {% block content %}
 
 
-        {% endblock %}
+
         
-        <footer class="bg-dark text-white pt-5 pb-4" style="background-color: beige;">
+        {% endblock %}
+        </div>
+        <div class="container-fluid pt-5"> <!-- fixed-bottom -->
+        <footer class="text-black pt-3">
             <div class="container text-center text-md-left">
                 <div class="row text-center text-md-left">
                     <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                         <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Column 1</h5>
-                        <p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
                     </div>
                     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                         <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Column 2</h5>
-                        <p>
-                            <a href="#" class="text-white" style="text-decoration: none;">Link 1</a>
-                        </p>
-                        <p>
-                            <a href="#" class="text-white" style="text-decoration: none;">Link 2</a>
-                        </p>
-                        <p>
-                            <a href="#" class="text-white" style="text-decoration: none;">Link 3</a>
-                        </p>
                     </div>
                     <div class="col-md3 col-lg-2 col-xl-2 mx-auto mt-3">
                         <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Column 3</h5>
-                        <p>
-                            <a href="#" class="text-white" style="text-decoration: none;">Link 1</a>
-                        </p>
-                        <p>
-                            <a href="#" class="text-white" style="text-decoration: none;">Link 2</a>
-                        </p>
-                        <p>
-                            <a href="#" class="text-white" style="text-decoration: none;">Link 3</a>
-                        </p>
                     </div>
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
                         <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Column 4</h5>
-                        <p>
-                            <i class="fas fa-home mr-3"></i>City, ST 99999
-                        </p>
                     </div>
                     <div>
 
                     </div>
-                </div> <!-- row -->
+                </div> 
                 <hr class="mb-4">
                 <div class="row align-items-center">
                     <div class="col-md-7 col-lg-8">
@@ -94,15 +111,12 @@
                         </p>
                     </div>
                 </div>
-            </div> <!-- container-->
+            </div> 
         </footer>
-        
-            
-        
     </div>
+
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
-        <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> -->
     </body>
 
 </html>
