--- a/Templates/business_profile.html
+++ b/Templates/business_profile.html
@@ -1,15 +1,102 @@
 {% extends 'base.html' %}
 
-{% block content %}
-<br/><br/>
 
-
-{% endblock %}{% extends 'base.html' %}
 
 {% block content %}
-<br/><br/>
-<h1>The Message is: </h1>
-<h2>{{ message }}</h2>
 
+
+<div class="row d-flex justify-content-center pb-5">
+    <div class="col-md-1">
+        <p><small><a class="page-links"  style="text-decoration: none;" href="#">reviews</a></small></p> <!-- url 'businessReviews' -->
+    </div>
+    <div class="col-md-2">
+        <p><small><a class="page-links"  style="text-decoration: none;" href="{% url 'changePassword' %}">update password</a></small></p> 
+    </div>
+</div>
+<div class="row">
+    <h3 class="mb-3" style="text-align: center">Update Profile</h3>
+    <div class="container-bordered border border-dark rounded-2 col-md-5 p-5 mx-auto">
+        <form method="POST" action="{% url 'businessProfile' %}">
+            {% csrf_token %}
+            <div class="mb-3">
+                <label for="FormControlInput1" class="form-label">Business Name</label>
+                {{ business_profile_form.name }}
+            </div>
+            <div class="mb-3">
+                <label for="FormControlInput2" class="form-label">First Name - Point of Contact</label>
+                {{ business_profile_form.poc_first }}
+            </div>
+            <div class="mb-3">
+                <label for="FormControlInput3" class="form-label">Last Name - Point of Contact</label>
+                {{ business_profile_form.poc_last }}
+            </div>
+            <div class="mb-3">
+                <label for="FormControlInput4" class="form-label">Address</label>
+                {{ business_profile_form.address }}
+            </div>
+            <div class="mb-3">
+                <label for="FormControlInput5" class="form-label">City</label>
+                {{ business_profile_form.city }}
+            </div>
+            <div class="mb-3">
+                <label for="FormControlInput6" class="form-label">State</label>
+                {{ business_profile_form.state }}
+            </div>
+            <div class="mb-3">
+                <label for="FormControlInput7" class="form-label">Zip Code</label>
+                {{ business_profile_form.zip }}
+            </div>
+            <div class="mb-3">
+                <label for="FormControlInput8" class="form-label">Email Address</label>
+                {{ business_profile_form.email }}
+            </div>
+            <div class="mb-3">
+                <label for="FormControlInput9" class="form-label">Phone Number</label>
+                {{ business_profile_form.phone }}
+            </div>
+            <div class="mb-3">
+                <label for="FormControlInput10" class="form-label">Website URL</label>
+                {{ business_profile_form.url }}
+            </div>
+            <div class="mb-5">
+                <label for="FormControlInput11" class="form-label">Description</label>
+                {{ business_profile_form.description }}
+            </div>
+            <div class="form-check mb-3">
+                <input class="form-check-input" type="checkbox" name="cleaning"  id="flexCheckChecked">{{ business_profile_form.cleaning }}</input>
+                <label class="form-check-label" for="flexCheckChecked">
+                Cleaning
+                </label>
+            </div>
+            <div class="form-check mb-3">
+                <input class="form-check-input" type="checkbox" name="plumbing" id="flexCheckChecked">{{ business_profile_form.plumbing }}</input>
+                <label class="form-check-label" for="flexCheckChecked">
+               Plumbing
+                </label>
+            </div>
+            <div class="form-check mb-3">
+                <input class="form-check-input" type="checkbox" name="electrical"  id="flexCheckChecked">{{ business_profile_form.electrical }}</input>
+                <label class="form-check-label" for="flexCheckChecked">
+                Electrical
+                </label>
+            </div>
+            <div class="form-check mb-3">
+                <input class="form-check-input" type="checkbox" name="improvement"  id="flexCheckChecked">{{ business_profile_form.improvement }}</input>
+                <label class="form-check-label" for="flexCheckChecked">
+                Improvement
+                </label>
+            </div>
+            <div class="form-check mb-3">
+                <input class="form-check-input" type="checkbox" name="landscape"  id="flexCheckChecked">{{ business_profile_form.landscape }}</input>
+                <label class="form-check-label" for="flexCheckChecked">
+                Landscape
+                </label>
+            </div>
+            <input type="submit" value="Update" class="btn btn-secondary">
+        </form>
+ 
+    </div>
+
+</div> <!-- row -->
 
 {% endblock %}
