--- a/Templates/login.html
+++ b/Templates/login.html
@@ -1,15 +1,26 @@
 {% extends 'base.html' %}
 
-{% block content %}
-<br/><br/>
-
-
-{% endblock %}{% extends 'base.html' %}
 
 {% block content %}
-<br/><br/>
-<h1>The Message is: </h1>
-<h2>{{ message }}</h2>
+<br/>
+
+<div class="col-md-6 offset-md-3"> <!-- d-flex justify-content-center py-5 -->
+    <form method="POST">
+        {% csrf_token %}
+        
+        <div class="form-group mb-3">
+            {{ form.username }}
+        </div>
+        <div class="form-group mb-3">
+            {{ form.password }}
+        </div>
+        
+        <div class="mb-3">
+            <button type="submit" class="btn">Login</button>
+        </div>
+    </form>
+</div>
+
 
 
 {% endblock %}
