--- a/Templates/business_profile.html
+++ b/Templates/business_profile.html
@@ -7,10 +7,13 @@
 
 <div class="row d-flex justify-content-center pb-5">
     <div class="col-md-1">
-        <p><small><a class="page-links"  style="text-decoration: none;" href="#">reviews</a></small></p> <!-- url 'businessReviews' -->
+        <p><small><a class="page-links"  style="text-decoration: none;" href="{% url 'businessReviews' info.user %}">reviews</a></small></p> 
     </div>
     <div class="col-md-2">
         <p><small><a class="page-links"  style="text-decoration: none;" href="{% url 'changePassword' %}">update password</a></small></p> 
+    </div>
+    <div class="col-md-2">
+        <p><small><a class="page-links"  style="text-decoration: none;" href="{% url 'deleteAccount' user.username %}">delete account</a></small></p> 
     </div>
 </div>
 <div class="row">
@@ -61,6 +64,9 @@
             <div class="mb-5">
                 <label for="FormControlInput11" class="form-label">Description</label>
                 {{ business_profile_form.description }}
+            </div>
+            <div class="mb-3">
+                <h6>Select all that apply:</h6>
             </div>
             <div class="form-check mb-3">
                 <input class="form-check-input" type="checkbox" name="cleaning"  id="flexCheckChecked">{{ business_profile_form.cleaning }}</input>
